# MeowBiu

./: .gitmodules  gif2hex.py  my_gif.h
LVGL_IDF_RLOTTIE/SPI_Rlottie/components/display/: display.c
LVGL_IDF_RLOTTIE/SPI_Rlottie/components/display/include/: display.h
LVGL_IDF_RLOTTIE/SPI_Rlottie/components/rlottie/: CMakeLists.txt
LVGL_IDF_RLOTTIE/SPI_Rlottie/main/: CMakeLists.txt  main.c
LVGL_IDF_RLOTTIE/TFT_SPI_IDF/components/display/: CMakeLists.txt  display.c
LVGL_IDF_RLOTTIE/TFT_SPI_IDF/main/: CMakeLists.txt  idf_component.yml  main.c
MeowBiuFirmware/: CMakeLists.txt
MeowBiuFirmware/components/display/: CMakeLists.txt  display.c
MeowBiuFirmware/components/face/: CMakeLists.txt  face.c
MeowBiuFirmware/components/face/assets/: nail.c  nail_trans.c
MeowBiuFirmware/components/face/assets/output/: excited_end.c  excited_loop.c  excited_start.c  excited_start_trans.c  nail.c  nail_trans.c  nailpolishing.c
MeowBiuFirmware/components/face/include/: face.h
MeowBiuFirmware/main/: CMakeLists.txt  main.c
RTC_Test/: platformio.ini
RTC_Test/src/: main.cpp
TFT_LVGL/: platformio.ini
TFT_LVGL/src/: BallAnim.h  Simple_Loading.c  main.cpp
TFT_LVGL_GIF/: platformio.ini
TFT_LVGL_GIF/src/: BallAnim.cpp  User_Setup.h  main.cpp
TFT_LVGL_LOTTIE/: platformio.ini
TFT_LVGL_LOTTIE/Animations/: Test2.json  test2.txt  testD.txt
TFT_LVGL_LOTTIE/src/: img_bulb_gif.c  main.cpp
TFT_Test/: platformio.ini
TFT_Test/src/: main.cpp
output/: OC.h  WTFDLLM.c  WTF_clean.c  blink.c  bulb.c  cat_small.c  happy-birthday_third.c
(+4 files in other folders)
